--- a/video_thumbnails/index.html
+++ b/video_thumbnails/index.html
@@ -5,11 +5,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="theme-color" content="#000000" />
         <link rel="stylesheet" href="style.css" />
-        <script src="script.js" defer></script>
-        <!-- <link rel="apple-touch-icon" sizes="180x180" href="./img/logo.png"> -->
-        <!-- <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon-32x32.png"> -->
-        <!-- <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon-16x16.png"> -->
-        <!-- <link rel="manifest" href="./img/manifest.json"> -->
         <title>Video thumbnails</title>
     </head>
     <body>
@@ -19,6 +14,7 @@
                 position: relative;
                 width: 120px;
                 height: 120px;
+                margin: 5px;
             "
             target="_blank"
             href="https://youtube.com/watch?v=-Ga9Up3wZZU"
@@ -49,6 +45,7 @@
                 position: relative;
                 width: 120px;
                 height: 120px;
+                margin: 5px;
             "
             target="_blank"
             href="https://youtube.com/watch?v=OCkWIrjKp3k"
@@ -79,6 +76,7 @@
                 position: relative;
                 width: 120px;
                 height: 120px;
+                margin: 5px;
             "
             target="_blank"
             href="https://youtube.com/watch?v=iBrKd8WcwDc"
