--- a/video_thumbnails/index.html
+++ b/video_thumbnails/index.html
@@ -19,7 +19,7 @@
             target="_blank"
             href="https://youtube.com/watch?v=-Ga9Up3wZZU"
             ><img
-                style="width: 100%; height: 100%; border-radius: 50%"
+                style="width: 100%; height: 100%; border-radius: 50%; object-fit: cover"
                 src="https://img.youtube.com/vi/-Ga9Up3wZZU/maxresdefault.jpg"
                 alt="Video thumbnail"
             />
@@ -50,7 +50,7 @@
             target="_blank"
             href="https://youtube.com/watch?v=OCkWIrjKp3k"
             ><img
-                style="width: 100%; height: 100%; border-radius: 50%"
+                style="width: 100%; height: 100%; border-radius: 50%; object-fit: cover"
                 src="https://img.youtube.com/vi/OCkWIrjKp3k/maxresdefault.jpg"
                 alt="Video thumbnail"
             />
@@ -81,7 +81,7 @@
             target="_blank"
             href="https://youtube.com/watch?v=iBrKd8WcwDc"
             ><img
-                style="width: 100%; height: 100%; border-radius: 50%"
+                style="width: 100%; height: 100%; border-radius: 50%; object-fit: cover"
                 src="https://img.youtube.com/vi/iBrKd8WcwDc/maxresdefault.jpg"
                 alt="Video thumbnail"
             />
